# dsa_in_cpp

./: .gitignore  .ycm_extra_conf.py
ch01/ex01/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
ch01/ex02/: .tempFile  CMakeLists.txt  main.cpp
ch01/ex03/: main.cpp
ch01/ex04/: .tempFile  main.cpp  output  testfile1  testfile2  testfile3  testfile4
ch01/ex05/: main.cpp
ch01/ex06/: main.cpp
ch01/ex07/: main.cpp
ch01/ex08/: main.cpp
ch01/ex09/: main.cpp
ch01/ex10/: main.cpp
ch02/ex07/: main.cpp
ch02/ex08/: main.cpp
ch02/ex15/: main.cpp
ch02/ex16/: main.cpp
ch02/ex17/: main.cpp
ch02/ex18/: main.cpp
ch02/ex19/: main.cpp
ch02/ex20/: main.cpp
ch02/ex23/: main.cpp
ch02/ex26/: main.cpp
ch02/ex27/: main.cpp
ch02/ex28/: main.cpp
ch03/class01/: main.cpp
ch03/ex01/: main.cpp
ch03/ex02/: main.cpp
ch03/ex03/: main.cpp
ch03/ex04/: main.cpp
ch03/ex06/: main.cpp
ch03/ex07/: main.cpp
ch03/ex11/: main.cpp
ch03/ex12/: main.cpp
ch03/ex13/: main.cpp
ch03/ex20/: main.cpp
ch03/ex21/: main.cpp
ch03/ex21.2/: main.cpp
ch03/ex24/: main.cpp
ch03/ex25/: main.cpp
ch03/ex26/: main.cpp
ch03/ex28/: main.cpp
ch03/ex30/: main.cpp
ch03/ex30.2/: main.cpp
ch03/ex31/: main.cpp
ch03/ex32/: main.cpp
ch03/ex33/: main.cpp
ch03/ex37/: main  main.cpp
ch04/class01/: main  main.cpp
ch04/class02/: main  main.cpp
scripts/: autopush.sh  newclass.sh  newex.sh
templates/: main.cpp
util/: Random.h  Timer.cpp  Timer.h  matrix.h  timer.h  util.h
